--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,6 +4,15 @@ import org.apache.tools.ant.taskdefs.condition.Os
 
 buildscript {
     ext {
+        googlePlayServicesVersion = "+" // default: "+"
+        firebaseMessagingVersion = "21.1.0" // default: "21.1.0"
+
+        // Other settings
+        compileSdkVersion = 23 // default: 23
+        buildToolsVersion = "23.0.1" // default: "23.0.1"
+        targetSdkVersion = 23 // default: 23
+        supportLibVersion = "23.1.1" // default: 23.1.1
+        
         buildToolsVersion = findProperty('android.buildToolsVersion') ?: "31.0.0"
         minSdkVersion = 21
         compileSdkVersion = Integer.parseInt(findProperty('android.compileSdkVersion') ?: "31")
@@ -28,6 +37,7 @@ buildscript {
         classpath("com.android.tools.build:gradle:7.0.4")
         classpath("com.facebook.react:react-native-gradle-plugin")
         classpath("de.undercouch:gradle-download-task:4.1.2")
+        classpath('com.google.gms:google-services:4.3.3')
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
